@@ -42,7 +42,7 @@ impl fmt::Display for Error {
             Self::InvalidLength => write!(f, "encrypted data is shorter than 128 bytes"),
             Self::InvalidMagicNumber => write!(f, "invalid magic number"),
             Self::UnknownVersion(version) => write!(f, "unknown version number `{version}`"),
-            Self::InvalidParams(err) => write!(f, "{err}"),
+            Self::InvalidParams(err) => err.fmt(f),
             Self::InvalidChecksum => write!(f, "checksum mismatch"),
             Self::InvalidHeaderMac(_) => write!(f, "invalid header MAC"),
             Self::InvalidMac(_) => write!(f, "invalid MAC"),
@@ -59,13 +59,6 @@ impl std::error::Error for Error {
         } else {
             None
         }
-    }
-}
-
-impl From<InvalidParams> for Error {
-    #[inline]
-    fn from(source: InvalidParams) -> Self {
-        Self::InvalidParams(source)
     }
 }
 
@@ -342,14 +335,6 @@ mod tests {
             .source()
             .unwrap()
             .is::<MacError>());
-    }
-
-    #[test]
-    fn from_invalid_params_to_error() {
-        assert_eq!(
-            Error::from(InvalidParams),
-            Error::InvalidParams(InvalidParams)
-        );
     }
 
     #[test]
