@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.8.7\...HEAD[Unreleased]
+
+=== Removed
+
+* Remove `impl From<InvalidParams> for Error` ({pull-request-url}/110[#110])
+
 == {compare-url}/v0.8.6\...v0.8.7[0.8.7] - 2024-01-07
 
 === Changed
